[gd_scene load_steps=3 format=3 uid="uid://d1iqu6lkta01j"]

[ext_resource type="Script" path="res://Multiplayer_Controller.gd" id="1_ylvpy"]
[ext_resource type="PackedScene" uid="uid://bd7i2nrkldacx" path="res://game_over_screen.tscn" id="2_0ydbv"]

[node name="Home_Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ylvpy")

[node name="Alice_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 421.0
offset_top = 210.0
offset_right = 727.0
offset_bottom = 287.0
theme_override_font_sizes/font_size = 50
text = "    Player 1    "

[node name="Emily_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 421.0
offset_top = 315.0
offset_right = 727.0
offset_bottom = 392.0
theme_override_font_sizes/font_size = 50
text = "    Player 2    "

[node name="Start Game" type="Button" parent="."]
layout_mode = 0
offset_left = 424.0
offset_top = 417.0
offset_right = 731.0
offset_bottom = 494.0
theme_override_font_sizes/font_size = 50
text = " Start Game "

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 307.0
offset_top = 124.0
offset_right = 862.0
offset_bottom = 176.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 201.0
offset_top = 128.0
offset_right = 300.0
offset_bottom = 171.0
theme_override_font_sizes/font_size = 29
text = "Name:"

[node name="GameOverScreen" parent="." instance=ExtResource("2_0ydbv")]
visible = false

[connection signal="button_down" from="Alice_Button" to="." method="_on_alice_button_button_down"]
[connection signal="button_down" from="Emily_Button" to="." method="_on_emily_button_button_down"]
[connection signal="button_down" from="Start Game" to="." method="_on_start_game_button_down"]
